tests/golden/parse_errors/fun_invalid_start.err
Parse error at 1:5: expected function name after `fun` declaration or `(` for function expression, found Semicolon `;`
  fun ;
      ^
